--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Wodsoft.ComBoost.Data",
-  "version": "3.0.0-alpha1",
+  "version": "3.0.0-alpha2",
   "authors": [ "Kation" ],
   "description": "ComBoost实体模块。",
   "packOptions": {
@@ -17,8 +17,6 @@
     "netstandard1.6": {
       "imports": "",
       "dependencies": {
-        "System.ComponentModel.Annotations": "4.1.0",
-        "System.Linq.Queryable": "4.0.1"
       }
     },
     "net451": {
@@ -30,7 +28,7 @@
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Security": "[3.0.0-alpha1,4.0.0)",
-    "Wodsoft.ComBoost": "[3.0.0-alpha1,4.0.0)"
+    "Wodsoft.ComBoost.Data.Core": "[3.0.0-alpha2,4.0.0)",
+    "Wodsoft.ComBoost": "[3.0.0-alpha2,4.0.0)"
   }
 }
