--- a/src/Wodsoft.ComBoost.EntityFramework/project.json
+++ b/src/Wodsoft.ComBoost.EntityFramework/project.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "title": "Wodsoft.ComBoost.EntityFramework",
-  "version": "3.0.0-alpha1",
+  "version": "3.0.0-alpha2",
   "authors": [ "Kation" ],
   "description": "ComBoost用于EntityFramework实现的实体模块。",
   "packOptions": {
@@ -14,14 +14,14 @@
     "releaseNotes": "Alpha测试版，请勿用于正式环境。"
   },
   "dependencies": {
+    "EntityFramework": "6.1.3",
     "System.Interactive.Async": "3.0.0",
-    "Wodsoft.ComBoost.Data": "[3.0.0-alpha1,4.0.0)"
+    "Wodsoft.ComBoost.Data.Core": "[3.0.0-alpha2,4.0.0)"
   },
 
   "frameworks": {
     "net451": {
       "dependencies": {
-        "EntityFramework": "6.0.0-*"
       }
     }
   }
