--- a/src/Wodsoft.ComBoost.Security/project.json
+++ b/src/Wodsoft.ComBoost.Security/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Wodsoft.ComBoost.Security",
-  "version": "3.0.0-alpha1",
+  "version": "3.0.0-alpha2",
   "authors": [ "Kation" ],
   "description": "ComBoost安全模块。",
   "packOptions": {
@@ -17,14 +17,13 @@
     "netstandard1.6": {
       "imports": "",
       "dependencies": {
-        "System.Security.Claims": "4.0.1",
-        "System.Security.Principal": "4.0.1",
-        "NETStandard.Library": "1.6.0"
+        "System.Security.Claims": "4.3.0",
+        "System.Security.Principal": "4.3.0"
       }
     },
     "net451": {}
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Core": "[3.0.0-alpha1,4.0.0)"
+    "Wodsoft.ComBoost.Core": "[3.0.0-alpha2,4.0.0)"
   }
 }
