--- a/src/Wodsoft.ComBoost.SingleSignOn.Core/project.json
+++ b/src/Wodsoft.ComBoost.SingleSignOn.Core/project.json
@@ -1,7 +1,8 @@
-﻿{
-  "version": "1.0.0-alpha1",
+{
+  "version": "1.0.0-alpha2",
 
   "dependencies": {
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   },
 
@@ -9,7 +10,6 @@
     "netstandard1.6": {
       "imports": "dnxcore50",
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       }
     },
     "net451": {}
