--- a/src/Wodsoft.ComBoost.SingleSignOn/project.json
+++ b/src/Wodsoft.ComBoost.SingleSignOn/project.json
@@ -1,7 +1,8 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1",
     "Wodsoft.ComBoost": "3.0.0-*",
     "Wodsoft.ComBoost.Security": "3.0.0-*"
@@ -11,7 +12,6 @@
     "netstandard1.6": {
       "imports": "dnxcore50",
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       }
     },
     "net451": {}
