--- a/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Core/project.json
@@ -6,11 +6,11 @@
     "netstandard1.6": {
       "imports": "",
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       }
     }
   },
   "dependencies": {
-    "Wodsoft.ComBoost.Data": "3.0.0-*"
+    "NETStandard.Library": "1.6.1",
+    "Wodsoft.ComBoost.Data.Core": "3.0.0-*"
   }
 }
