--- a/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum.Domain/project.json
@@ -8,6 +8,7 @@
       "dependencies": {
         "Wodsoft.ComBoost.Forum.Core": "1.0.0-*",
         "Wodsoft.ComBoost.Security": "3.0.0-*",
+        "Wodsoft.ComBoost.Data": "3.0.0-*",
         "Wodsoft.ComBoost": "3.0.0-*"
       }
     }
