--- a/src/samples/Wodsoft.ComBoost.Forum/project.json
+++ b/src/samples/Wodsoft.ComBoost.Forum/project.json
@@ -18,8 +18,8 @@
     "Microsoft.AspNetCore.Session": "1.1.0",
     "Microsoft.AspNetCore.StaticFiles": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Design": "1.1.0",
-    "Microsoft.EntityFrameworkCore.InMemory": "1.1.0",
+    //"Microsoft.EntityFrameworkCore.Design": "1.1.0",
+    //"Microsoft.EntityFrameworkCore.InMemory": "1.1.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.1.0-preview4-final",
