添加SQL语句支持

--- a/src/Wodsoft.ComBoost.EntityFrameworkCore/project.json
+++ b/src/Wodsoft.ComBoost.EntityFrameworkCore/project.json
@@ -20,7 +20,7 @@
     "net451": {}
   },
   "dependencies": {
-    "Microsoft.EntityFrameworkCore": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Relational": "1.1.0",
     "Wodsoft.ComBoost.Data.Core": "[3.0.0-alpha10,4.0.0)"
   }
 }
