--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "Wodsoft.ComBoost": "[3.0.0-alpha15,4.0.0)",
     "Wodsoft.ComBoost.AspNetCore.Security": "[3.0.0-alpha15,4.0.0)",
+    "Wodsoft.ComBoost.AspNetCore": "[3.0.0-alpha15,4.0.0)",
     "Microsoft.Extensions.DependencyInjection": "1.1.0",
     "Microsoft.Extensions.Options": "1.1.0",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.1.0"
