增加转换器空判断

--- a/src/Wodsoft.ComBoost.Data/project.json
+++ b/src/Wodsoft.ComBoost.Data/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Wodsoft.ComBoost.Data",
-  "version": "3.0.0-alpha16",
+  "version": "3.0.0-alpha16-2",
   "authors": [ "Kation" ],
   "description": "ComBoost实体模块。",
   "packOptions": {
