--- a/src/Wodsoft.ComBoost.Mvc.Data/project.json
+++ b/src/Wodsoft.ComBoost.Mvc.Data/project.json
@@ -27,6 +27,6 @@
   },
   "dependencies": {
     "Wodsoft.ComBoost.Data": "[3.0.0-alpha16-2,4.0.0)",
-    "Wodsoft.ComBoost.Mvc": "[3.0.0-alpha16,4.0.0)"
+    "Wodsoft.ComBoost.Mvc": "[3.0.0-alpha16-2,4.0.0)"
   }
 }
