--- a/src/Wodsoft.ComBoost.Mvc/project.json
+++ b/src/Wodsoft.ComBoost.Mvc/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Wodsoft.ComBoost.Mvc",
-  "version": "3.0.0-alpha16",
+  "version": "3.0.0-alpha16-2",
   "authors": [ "Kation" ],
   "description": "ComBoost用于AspNetCore的Mvc模块。",
   "packOptions": {
@@ -27,7 +27,7 @@
   "dependencies": {
     "Wodsoft.ComBoost": "[3.0.0-alpha16,4.0.0)",
     "Wodsoft.ComBoost.AspNetCore.Security": "[3.0.0-alpha16,4.0.0)",
-    "Wodsoft.ComBoost.AspNetCore": "[3.0.0-alpha16,4.0.0)",
+    "Wodsoft.ComBoost.AspNetCore": "[3.0.0-alpha16-2,4.0.0)",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.1.3",
     "Microsoft.Extensions.DependencyInjection": "1.1.1",
     "Microsoft.Extensions.Options": "1.1.2"
