--- a/src/Wodsoft.ComBoost.AspNetCore.Security/Wodsoft.ComBoost.AspNetCore.Security.csproj
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/Wodsoft.ComBoost.AspNetCore.Security.csproj
@@ -3,19 +3,21 @@
   <PropertyGroup>
     <Description>ComBoost用于AspNet Core的安全模块。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.AspNetCore.Security</AssemblyTitle>
-    <VersionPrefix>3.0.0-alpha21</VersionPrefix>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
     <TargetFramework>netstandard1.3</TargetFramework>
     <AssemblyName>Wodsoft.ComBoost.AspNetCore.Security</AssemblyName>
     <PackageId>Wodsoft.ComBoost.AspNetCore.Security</PackageId>
     <PackageTags>ComBoost</PackageTags>
-    <PackageReleaseNotes>Alpha测试版，请勿用于正式环境。</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Kation/ComBoost</RepositoryUrl>
     <PackageTargetFallback>$(PackageTargetFallback);</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <Copyright>Copyright © Wodsoft 2016</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
