--- a/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
+++ b/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
@@ -3,14 +3,15 @@
   <PropertyGroup>
     <Description>ComBoost框架核心。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.Core</AssemblyTitle>
-    <VersionPrefix>3.0.0-alpha21</VersionPrefix>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
     <TargetFramework>netstandard1.3</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Wodsoft.ComBoost.Core</AssemblyName>
     <PackageId>Wodsoft.ComBoost.Core</PackageId>
     <PackageTags>ComBoost</PackageTags>
-    <PackageReleaseNotes>Alpha测试版，请勿用于正式环境。</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Kation/ComBoost</RepositoryUrl>
     <PackageTargetFallback>$(PackageTargetFallback);</PackageTargetFallback>
