--- a/src/Wodsoft.ComBoost.Mock/Wodsoft.ComBoost.Mock.csproj
+++ b/src/Wodsoft.ComBoost.Mock/Wodsoft.ComBoost.Mock.csproj
@@ -3,19 +3,21 @@
   <PropertyGroup>
     <Description>ComBoost用于单元测试的模拟模块。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.Mock</AssemblyTitle>
-    <VersionPrefix>3.0.0-alpha21</VersionPrefix>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
     <TargetFrameworks>netstandard1.6;net461</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.Mock</AssemblyName>
     <PackageId>Wodsoft.ComBoost.Mock</PackageId>
     <PackageTags>ComBoost</PackageTags>
-    <PackageReleaseNotes>Alpha测试版，请勿用于正式环境。</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Kation/ComBoost</RepositoryUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <Copyright>Copyright © Wodsoft 2016</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
