--- a/src/Wodsoft.ComBoost.Mvc.Data/Wodsoft.ComBoost.Mvc.Data.csproj
+++ b/src/Wodsoft.ComBoost.Mvc.Data/Wodsoft.ComBoost.Mvc.Data.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <Description>ComBoost用于AspNetCore Mvc的实体模块。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.Mvc.Data</AssemblyTitle>
-    <VersionPrefix>3.0.0-alpha21</VersionPrefix>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
     <TargetFrameworks>netstandard1.6;net46</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.Mvc.Data</AssemblyName>
     <PackageId>Wodsoft.ComBoost.Mvc.Data</PackageId>
     <PackageTags>ComBoost</PackageTags>
-    <PackageReleaseNotes>Alpha测试版，请勿用于正式环境。</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Kation/ComBoost</RepositoryUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50;portable-net45+win8+wpa81</PackageTargetFallback>
