--- a/src/Wodsoft.ComBoost.AspNetCore.Security/Wodsoft.ComBoost.AspNetCore.Security.csproj
+++ b/src/Wodsoft.ComBoost.AspNetCore.Security/Wodsoft.ComBoost.AspNetCore.Security.csproj
@@ -6,18 +6,18 @@
     <VersionPrefix>3.0.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Wodsoft.ComBoost.AspNetCore.Security</AssemblyName>
     <PackageId>Wodsoft.ComBoost.AspNetCore.Security</PackageId>
     <PackageTags>ComBoost</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Kation/ComBoost</RepositoryUrl>
-    <PackageTargetFallback>$(PackageTargetFallback);</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <Copyright>Copyright © Wodsoft 2016</Copyright>
+    <RootNamespace>Wodsoft.ComBoost.Security</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
