--- a/src/Wodsoft.ComBoost.Storage/Wodsoft.ComBoost.Storage.csproj
+++ b/src/Wodsoft.ComBoost.Storage/Wodsoft.ComBoost.Storage.csproj
@@ -6,7 +6,7 @@
     <VersionPrefix>3.0.0</VersionPrefix>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Authors>Kation</Authors>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.Storage</AssemblyName>
     <PackageId>Wodsoft.ComBoost.Storage</PackageId>
     <PackageTags>ComBoost</PackageTags>
