--- a/src/Wodsoft.ComBoost.Data/Wodsoft.ComBoost.Data.csproj
+++ b/src/Wodsoft.ComBoost.Data/Wodsoft.ComBoost.Data.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Description>ComBoost实体模块。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.Data</AssemblyTitle>
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.Data</AssemblyName>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
