--- a/src/Wodsoft.ComBoost.EntityFramework/Wodsoft.ComBoost.EntityFramework.csproj
+++ b/src/Wodsoft.ComBoost.EntityFramework/Wodsoft.ComBoost.EntityFramework.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Description>ComBoost用于EntityFramework实现的实体模块。</Description>
     <AssemblyTitle>Wodsoft.ComBoost.EntityFramework</AssemblyTitle>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.1</TargetFrameworks>
     <AssemblyName>Wodsoft.ComBoost.EntityFramework</AssemblyName>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
@@ -16,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='net461'">
     <PackageReference Include="System.Interactive.Async" Version="3.1.1" />
   </ItemGroup>
 
