--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,7 @@ on:
     branches: [ next ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 5
@@ -25,6 +25,22 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Pack
-      run: dotnet pack --configuration Release /src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj --version-suffix "${{github.run_id}}"
+      run: |
+        dotnet pack --configuration Release src/Wodsoft.ComBoost/Wodsoft.ComBoost.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.AspNetCore/Wodsoft.ComBoost.AspNetCore.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Data/Wodsoft.ComBoost.Data.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Data.Core/Wodsoft.ComBoost.Data.Core.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.EntityFramework/Wodsoft.ComBoost.EntityFramework.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.EntityFrameworkCore/Wodsoft.ComBoost.EntityFrameworkCore.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Mock/Wodsoft.ComBoost.Mock.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Mvc/Wodsoft.ComBoost.Mvc.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Mvc.Data/Wodsoft.ComBoost.Mvc.Data.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Security/Wodsoft.ComBoost.Security.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Grpc/Wodsoft.ComBoost.Grpc.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Grpc.AspNetCore/Wodsoft.ComBoost.Grpc.AspNetCore.csproj --version-suffix "${{github.run_id}}" -o nupkgs
+        dotnet pack --configuration Release src/Wodsoft.ComBoost.Grpc.Client/Wodsoft.ComBoost.Grpc.Client.csproj --version-suffix "${{github.run_id}}" -o nupkgs
     - name: Publish package
-      run: dotnet nuget push /src/Wodsoft.ComBoost.Core/bin/Release/*.symbols.nupkg -k ${{secrets.MYGET_TOKEN}} -s https://www.myget.org/F/comboost/api/v2/package
+      run: |
+        dotnet nuget push nupkgs/*.symbols.nupkg -k ${{secrets.MYGET_TOKEN}} -s https://www.myget.org/F/comboost/api/v2/package
