--- a/src/Wodsoft.ComBoost.Distributed.CAP/Wodsoft.ComBoost.Distributed.CAP.csproj
+++ b/src/Wodsoft.ComBoost.Distributed.CAP/Wodsoft.ComBoost.Distributed.CAP.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>ComBoost CAP分布式事务支持。</Description>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Wodsoft.ComBoost.Distributed</RootNamespace>
   </PropertyGroup>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="DotNetCore.CAP" Version="3.1.2" />
