--- a/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
+++ b/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>ComBoost分布式基础。</Description>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
   </PropertyGroup>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <ProjectReference Include="..\Wodsoft.ComBoost\Wodsoft.ComBoost.csproj" />
