--- a/src/Wodsoft.ComBoost.Grpc/Wodsoft.ComBoost.Grpc.csproj
+++ b/src/Wodsoft.ComBoost.Grpc/Wodsoft.ComBoost.Grpc.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Description>ComBoost Grpc基础。</Description>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <Import Project="../../common.props" />
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.17.0" />
